Fixed small layout issue

--- a/scss/global/_general.scss
+++ b/scss/global/_general.scss
@@ -15,7 +15,7 @@ body {
   font-family: "Plus Jakarta Sans", sans-serif;
   font-variation-settings: "wght" 500;
   width: 100%;
-  height: 100%;
+  height: auto;
   box-sizing: border-box;
   background-color: #f9fafe;
 }
